# website-scanner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: webhook_server.py
frontend/: .cta.json  index.html  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/lib/: api.ts  openapi.d.ts
frontend/src/routes/: $id.tsx  __root.tsx  index.tsx
src/: api.py  cli.py  scanner.py
