[project]
name = "website-scanner"
version = "0.1.0"
description = "a simple website scanner using botasaurus"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botasaurus>=4.0.88",
    "chrome-extension-python>=1.0.4",
    "faker>=37.4.0",
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.35.0",
]
